--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,3 +35,25 @@
   journal={ICLR},
   year={2023}
 }
+
+@article{zong2024vl,
+  title={VL-ICL Bench: The Devil in the Details of Benchmarking Multimodal In-Context Learning},
+  author={Zong, Yongshuo and Bohdal, Ondrej and Hospedales, Timothy},
+  journal={arXiv preprint arXiv:2403.13164},
+  year={2024}
+}
+
+@article{zong2023self,
+  title={Self-supervised multimodal learning: A survey},
+  author={Zong, Yongshuo and Mac Aodha, Oisin and Hospedales, Timothy},
+  journal={arXiv preprint arXiv:2304.01008},
+  year={2023}
+}
+
+@article{zong2022const,
+  title={conST: an interpretable multi-modal contrastive learning framework for spatial transcriptomics},
+  author={Zong, Yongshuo and Yu, Tingyang and Wang, Xuesong and Wang, Yixuan and Hu, Zhihang and Li, Yu},
+  journal={BioRxiv preprint},
+  year={2022},
+}
+
