--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   selected={true},
   code={https://github.com/ys-zong/VLGuard},
   arxiv={https://arxiv.org/abs/2402.02207},
-  website={https://ys-zong.github.io/VLGuard/}
+  website={https://ys-zong.github.io/VLGuard/},
+  preview={zong2024safety.png}
 }
 
 @article{zong2024fool,
@@ -19,7 +20,8 @@
   year={2024},
   selected={true},
   code={https://github.com/ys-zong/FoolyourVLLMs},
-  arxiv={https://arxiv.org/abs/2310.01651}
+  arxiv={https://arxiv.org/abs/2310.01651},
+  preview={zong2024fool.png}
 }
 
 @inproceedings{zhang2024if,
@@ -29,7 +31,8 @@
   year={2024},
   selected={true},
   code={https://github.com/letian2003/c-vqa},
-  arxiv={https://arxiv.org/abs/2310.06627}
+  arxiv={https://arxiv.org/abs/2310.06627},
+  preview={zhang2024if.png}
 }
 
 @inproceedings{bohdal2023meta,
@@ -40,7 +43,8 @@
   selected={true},
   code={https://github.com/edi-meta-learning/meta-omnium},
   arxiv={https://arxiv.org/abs/2305.07625v1},
-  website={https://edi-meta-learning.github.io/meta-omnium/}
+  website={https://edi-meta-learning.github.io/meta-omnium/},
+  preview={bohdal2023meta.png}
 }
 
 @article{zong2023medfair,
@@ -51,7 +55,8 @@
   selected={true},
   code={https://github.com/ys-zong/MEDFAIR},
   arxiv={https://arxiv.org/abs/2210.01725},
-  website={https://ys-zong.github.io/MEDFAIR/}
+  website={https://ys-zong.github.io/MEDFAIR/},
+  preview={zong2023medfair.png}
 }
 
 @article{zong2024vl,
@@ -61,7 +66,8 @@
   year={2024},
   selected={true},
   code={https://github.com/ys-zong/VL-ICL},
-  arxiv={https://ys-zong.github.io/VL-ICL/}
+  arxiv={https://ys-zong.github.io/VL-ICL/},
+  preview={zong2024vl.png}
 }
 
 @article{zong2023self,
@@ -71,7 +77,8 @@
   year={2023},
   selected={true},
   code={https://github.com/ys-zong/awesome-self-supervised-multimodal-learning},
-  arxiv={https://arxiv.org/abs/2304.01008}
+  arxiv={https://arxiv.org/abs/2304.01008},
+  preview={zong2023self.png}
 }
 
 @article{zong2022const,
@@ -81,6 +88,7 @@
   year={2022},
   selected={true},
   code={https://github.com/ys-zong/conST},
-  arxiv={https://www.biorxiv.org/content/10.1101/2022.01.14.476408v1}
+  arxiv={https://www.biorxiv.org/content/10.1101/2022.01.14.476408v1},
+  preview={zong2022const.png}
 }
 
