update arxiv link

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   year={2024},
   selected={true},
   code={https://github.com/ys-zong/VLGuard},
-  arxiv={https://arxiv.org/abs/2402.02207},
+  arxiv={2402.02207},
   website={https://ys-zong.github.io/VLGuard/},
   preview={zong2024safety.png}
 }
@@ -20,7 +20,7 @@
   year={2024},
   selected={true},
   code={https://github.com/ys-zong/FoolyourVLLMs},
-  arxiv={https://arxiv.org/abs/2310.01651},
+  arxiv={2310.01651},
   preview={zong2024fool.png}
 }
 
@@ -31,7 +31,7 @@
   year={2024},
   selected={true},
   code={https://github.com/letian2003/c-vqa},
-  arxiv={https://arxiv.org/abs/2310.06627},
+  arxiv={2310.06627},
   preview={zhang2024if.png}
 }
 
@@ -42,7 +42,7 @@
   year={2023},
   selected={true},
   code={https://github.com/edi-meta-learning/meta-omnium},
-  arxiv={https://arxiv.org/abs/2305.07625v1},
+  arxiv={2305.07625v1},
   website={https://edi-meta-learning.github.io/meta-omnium/},
   preview={bohdal2023meta.png}
 }
@@ -54,7 +54,7 @@
   year={2023},
   selected={true},
   code={https://github.com/ys-zong/MEDFAIR},
-  arxiv={https://arxiv.org/abs/2210.01725},
+  arxiv={2210.01725},
   website={https://ys-zong.github.io/MEDFAIR/},
   preview={zong2023medfair.png}
 }
@@ -66,7 +66,8 @@
   year={2024},
   selected={true},
   code={https://github.com/ys-zong/VL-ICL},
-  arxiv={https://ys-zong.github.io/VL-ICL/},
+  arxiv={2403.13164},
+  website={https://ys-zong.github.io/VL-ICL/},
   preview={zong2024vl.png}
 }
 
@@ -77,7 +78,7 @@
   year={2023},
   selected={true},
   code={https://github.com/ys-zong/awesome-self-supervised-multimodal-learning},
-  arxiv={https://arxiv.org/abs/2304.01008},
+  arxiv={2304.01008},
   preview={zong2023self.png}
 }
 
@@ -88,7 +89,7 @@
   year={2022},
   selected={true},
   code={https://github.com/ys-zong/conST},
-  arxiv={https://www.biorxiv.org/content/10.1101/2022.01.14.476408v1},
+  html={https://www.biorxiv.org/content/10.1101/2022.01.14.476408v1},
   preview={zong2022const.png}
 }
 
