--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
   code={https://github.com/ys-zong/VLGuard},
   arxiv={2402.02207},
   website={https://ys-zong.github.io/VLGuard/},
-  preview={zong2024safety.png}
+  preview={zong2024safety.png},
+  tldr={VLLM fine-tuning breaks LLM safety, but our VLGuard can fix this.}
 }
 
 @article{zong2024fool,
@@ -21,7 +22,8 @@
   selected={true},
   code={https://github.com/ys-zong/FoolyourVLLMs},
   arxiv={2310.01651},
-  preview={zong2024fool.png}
+  preview={zong2024fool.png},
+  tldr={(V)LLM-based MCQ is not permutation robust.}
 }
 
 @inproceedings{zhang2024if,
@@ -32,7 +34,8 @@
   selected={true},
   code={https://github.com/letian2003/c-vqa},
   arxiv={2310.06627},
-  preview={zhang2024if.png}
+  preview={zhang2024if.png},
+  tldr={Vision large language models do not understand counterfactual conditions well.}
 }
 
 @inproceedings{bohdal2023meta,
@@ -44,7 +47,8 @@
   code={https://github.com/edi-meta-learning/meta-omnium},
   arxiv={2305.07625v1},
   website={https://edi-meta-learning.github.io/meta-omnium/},
-  preview={bohdal2023meta.png}
+  preview={bohdal2023meta.png},
+  tldr={A framework for evaluating meta-learners across various vision tasks consistently.}
 }
 
 @article{zong2023medfair,
@@ -56,7 +60,8 @@
   code={https://github.com/ys-zong/MEDFAIR},
   arxiv={2210.01725},
   website={https://ys-zong.github.io/MEDFAIR/},
-  preview={zong2023medfair.png}
+  preview={zong2023medfair.png},
+  tldr={We develop a fairness benchmark for medical imaging and find that the state-of-the-art bias mitigation algorithm does not significantly outperform ERM.}
 }
 
 @article{zong2024vl,
@@ -68,7 +73,8 @@
   code={https://github.com/ys-zong/VL-ICL},
   arxiv={2403.13164},
   website={https://ys-zong.github.io/VL-ICL/},
-  preview={zong2024vl.png}
+  preview={zong2024vl.png},
+  tldr={VL-ICL Bench is a better multimodal ICL benchmark than VQA and captioning.}
 }
 
 @article{zong2023self,
@@ -79,7 +85,8 @@
   selected={true},
   code={https://github.com/ys-zong/awesome-self-supervised-multimodal-learning},
   arxiv={2304.01008},
-  preview={zong2023self.png}
+  preview={zong2023self.png},
+  tldr={Systematic review of self-supervised multimodal learning methods.}
 }
 
 @article{zong2022const,
@@ -90,6 +97,7 @@
   selected={true},
   code={https://github.com/ys-zong/conST},
   html={https://www.biorxiv.org/content/10.1101/2022.01.14.476408v1},
-  preview={zong2022const.png}
+  preview={zong2022const.png},
+  tldr={A contrastive SSL method for spatial transcriptomics representation learning.}
 }
 
