--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
   tldr={(V)LLM-based MCQ is not permutation robust.}
 }
 
-@inproceedings{zhang2024if,
+@article{zhang2024if,
   title={What if the tv was off? examining counterfactual reasoning abilities of multi-modal language models},
   author={Zhang, Letian and Zhai, Xiaotong and Zhao, Zhongkai and Zong, Yongshuo and Wen, Xin and Zhao, Bingchen},
   booktitle={CVPR},
@@ -38,7 +38,7 @@
   tldr={Vision large language models do not understand counterfactual conditions well.}
 }
 
-@inproceedings{bohdal2023meta,
+@article{bohdal2023meta,
   title={Meta omnium: A benchmark for general-purpose learning-to-learn},
   author={Bohdal, Ondrej and Tian, Yinbing and Zong, Yongshuo and Chavhan, Ruchika and Li, Da and Gouk, Henry and Guo, Li and Hospedales, Timothy},
   booktitle={CVPR},
@@ -67,7 +67,7 @@
 @article{zong2024vl,
   title={VL-ICL Bench: The Devil in the Details of Benchmarking Multimodal In-Context Learning},
   author={Zong, Yongshuo and Bohdal, Ondrej and Hospedales, Timothy},
-  journal={arXiv preprint arXiv:2403.13164},
+  journal={arXiv preprint},
   year={2024},
   selected={true},
   code={https://github.com/ys-zong/VL-ICL},
@@ -80,7 +80,7 @@
 @article{zong2023self,
   title={Self-supervised multimodal learning: A survey},
   author={Zong, Yongshuo and Mac Aodha, Oisin and Hospedales, Timothy},
-  journal={arXiv preprint arXiv:2304.01008},
+  journal={arXiv preprint},
   year={2023},
   selected={true},
   code={https://github.com/ys-zong/awesome-self-supervised-multimodal-learning},
