--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
 @article{zhang2024if,
   title={What if the tv was off? examining counterfactual reasoning abilities of multi-modal language models},
   author={Zhang, Letian and Zhai, Xiaotong and Zhao, Zhongkai and Zong, Yongshuo and Wen, Xin and Zhao, Bingchen},
-  booktitle={CVPR},
+  journal={CVPR},
   year={2024},
   selected={true},
   code={https://github.com/letian2003/c-vqa},
@@ -41,7 +41,7 @@
 @article{bohdal2023meta,
   title={Meta omnium: A benchmark for general-purpose learning-to-learn},
   author={Bohdal, Ondrej and Tian, Yinbing and Zong, Yongshuo and Chavhan, Ruchika and Li, Da and Gouk, Henry and Guo, Li and Hospedales, Timothy},
-  booktitle={CVPR},
+  journal={CVPR},
   year={2023},
   selected={true},
   code={https://github.com/edi-meta-learning/meta-omnium},
