--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,6 +33,7 @@
   year={2024},
   selected={true},
   code={https://github.com/letian2003/c-vqa},
+  website={https://bzhao.me/C-VQA/},
   arxiv={2310.06627},
   preview={zhang2024if.png},
   tldr={Vision large language models do not understand counterfactual conditions well.}
