--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   arxiv={2402.02207},
   website={https://ys-zong.github.io/VLGuard/},
   preview={zong2024safety.png},
+  poster={VLGuard-poster.pdf},
   tldr={VLLM fine-tuning breaks LLM safety, but our VLGuard can fix this.}
 }
 
@@ -23,6 +24,7 @@
   code={https://github.com/ys-zong/FoolyourVLLMs},
   arxiv={2310.01651},
   preview={zong2024fool.png},
+  poster={FoolYourVLLMs-poster.pdf},
   tldr={(V)LLM-based MCQ is not permutation robust.}
 }
 
@@ -62,6 +64,7 @@
   arxiv={2210.01725},
   website={https://ys-zong.github.io/MEDFAIR/},
   preview={zong2023medfair.png},
+  poster={MEDFAIR-poster.pdf},
   tldr={We develop a fairness benchmark for medical imaging and find that the state-of-the-art bias mitigation algorithm does not significantly outperform ERM.}
 }
 
