--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,11 +81,11 @@
   tldr={VL-ICL Bench is a better multimodal ICL benchmark than VQA and captioning.}
 }
 
-@article{zong2023self,
+@article{zong2024self,
   title={Self-supervised multimodal learning: A survey},
   author={Zong, Yongshuo and Mac Aodha, Oisin and Hospedales, Timothy},
-  journal={arXiv preprint},
-  year={2023},
+  journal={IEEE T-PAMI},
+  year={2024},
   selected={true},
   code={https://github.com/ys-zong/awesome-self-supervised-multimodal-learning},
   arxiv={2304.01008},
