--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,10 +69,10 @@
 }
 
 @article{zong2024vl,
-  title={VL-ICL Bench: The Devil in the Details of Benchmarking Multimodal In-Context Learning},
+  title={VL-ICL Bench: The Devil in the Details of Multimodal In-Context Learning},
   author={Zong, Yongshuo and Bohdal, Ondrej and Hospedales, Timothy},
-  journal={arXiv preprint},
-  year={2024},
+  journal={ICLR},
+  year={2025},
   selected={true},
   code={https://github.com/ys-zong/VL-ICL},
   arxiv={2403.13164},
