--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@article{zong2025ground,
+  title={Ground-V: Teaching VLMs to Ground Complex Instructions in Pixels},
+  author={Zong, Yongshuo and Zhang, Qin and An, Dongsheng and Li, Zhihua and Xu, Xiang and Xu, Linghan and Tu, Zhuowen and Xing, Yifan and Dabeer, Onkar},
+  journal={CVPR},
+  year={2025},
+  selected={true},
+  arxiv={2505.13788},
+  preview={zong2025ground.png},
+  tldr={Ground-V sets new state-of-the-art on reasoning segmentation tasks.}
+}
+
+
 @article{zong2024safety,
   title={Safety Fine-Tuning at (Almost) No Cost: A Baseline for Vision Large Language Models},
   author={Zong, Yongshuo and Bohdal, Ondrej and Yu, Tingyang and Yang, Yongxin and Hospedales, Timothy},
